--- a/Home.html
+++ b/Home.html
@@ -31,7 +31,7 @@
                          
     </font>
 
-    <a href="file:///C:/Users/S/Desktop/Ganesh%20hosiery/Products.html">
+    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Products.html">
         <font face="arial" size="3" color="Red">
             Products
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -40,13 +40,13 @@
     </a>
     
     </a>
-    <a href="file:///C:/Users/S/Desktop/Ganesh%20hosiery/Contact.html">
+    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Contact.html">
         <font face="arial" size="3" color="Red">
             Contact
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </font>
     </a>
-    <a href="file:///C:/Users/S/Desktop/Ganesh%20hosiery/About.html">
+    <a href="https://yashkirar.github.io/Ganesh-Hosiery/About.html">
         <font face="arial" size="3" color="Red">
             About   
         </font>
