--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
                          
     </font>
 
-    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Login.html">
+    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Sign Up.html">
         <font face="arial" size="3" color="Red">
             Login
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
