--- a/Home.html
+++ b/Home.html
@@ -30,7 +30,7 @@
                          
     </font>
 
-    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Sign Up.html">
+    <a href="file:///C:/Users/S/Desktop/Login/Sign%20Up.html">
         <font face="arial" size="3" color="Red">
             Login
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -42,7 +42,7 @@
 
 
 
-    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Products.html">
+    <a href="file:///C:/Users/S/Desktop/Login/Products.html">
         <font face="arial" size="3" color="Red">
             Products
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -51,13 +51,13 @@
     </a>
     
     </a>
-    <a href="https://yashkirar.github.io/Ganesh-Hosiery/Contact.html">
+    <a href="file:///C:/Users/S/Desktop/Ganesh%20hosiery/Contact.html">
         <font face="arial" size="3" color="Red">
             Contact
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         </font>
     </a>
-    <a href="https://yashkirar.github.io/Ganesh-Hosiery/About.html">
+    <a href="file:///C:/Users/S/Desktop/Ganesh%20hosiery/About.html">
         <font face="arial" size="3" color="Red">
             About   
         </font>
