--- a/Sign Up.html
+++ b/Sign Up.html
@@ -12,27 +12,32 @@
 <h1>Sign Up</h1>
 <h4>It will take your few second</h4>
 
-<form>
-    <label>First Name</label><br>
+<form action="Otp.php" method="post">
+
+    <label>First Name</label>
     <input type="text">
-<br>
-    <label>Last Name</label><br>
+
+    <label>Last Name</label>
     <input type="text">
-<br>
-    <label>Email ID </label><br>
+
+    <label>Email ID </label>
     <input type="text">
-<br>
-    <label> Create password</label><br>
+
+    <label> Create password</label>
     <input type="password">
-<br>
-    <label>Confirm password</label><br>
+
+    <label>Confirm password</label>
     <input type="password">
-<br>
-<p>If you are signing up it means you have accept, <br> our <a href="a">Terms and conditions</a> and <a href="a">privacy policy</a></p>
-<input type="button" value="Sign Up">
+    
+    <button type="submit">Signup</button>
+
 </form>
+
+<p>If you are signing up it means you have accept, <br>our <a href="a">Terms and conditions</a> and <a href="a">privacy policy</a></p>
+
+
 </div>
-<p>If you have already account,<br> then <a href="https://yashkirar.github.io/Ganesh-Hosiery/Login.html">Login Here</a></p>
+<p class="already">If you have already account,<br> then <a href="file:///C:/Users/S/Desktop/Login/Login.html">Login Here</a></p>
 
 
 </body>
