--- a/Login.html
+++ b/Login.html
@@ -4,25 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-<div class="Login-box">
-    <h1>Login Here</h1>
+    <div class="Login">
+        <h1>Login</h1>
+        <form>
+            <label>Email Id</label>
+            <input type="text">
 
-    <form>
-        <label>Email Id</label><br>
-        <input type="text"><br>
-<br>
-        <label>Password</label><br>
-        <input type="password"><br><br><br>
+            <label>Password</label>
+            <input type="password">
 
-        <input type="button" value="Login">
-    </form>
-</div>
+            <button type="submit">Login</button>
 
+        </form>
 
+    </div>
+<p class="already">Not have an account? <a href="file:///C:/Users/S/Desktop/Login/Sign%20Up.html">Sign Up here</a></p>
 
 </body>
 </html>
